sass/template.sass
body

.body, .main
  display: table-cell
  *display: block
  _position: relative
  _left: -3px
  _margin-right: -3px
  width: auto
  _zoom: 1


.body:after, .main:after
  content: " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
  visibility: hidden
  clear: both
  height: 0 !important
  display: block
  line-height: 0
  font-size: 36px


.page
  margin: 0 auto
  width: 950px


.oldSchool
  width: 750px


.gs960
  width: 960px


.liquid
  width: auto
  margin: 0


.main

.leftCol
  float: left
  width: 250px
  _margin-right: -3px


.rightCol
  float: right
  width: 300px
  _margin-left: -3px


.gMail
  width: 160px


.gCal
  width: 180px


.yahoo
  width: 240px


.myYahoo
  width: 300px

